Modified paths of schedule.html

--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -408,8 +408,8 @@
             <div class="header">
                 <div class="title">Schedule of Meetings</div>
                 <div class="day-links">
-                <a href="#" onclick="showDay(0)">Day-1 (Apr 14)</a>
-                <a href="#" onclick="showDay(1)">Day-2 (Apr 15)</a>
+                <a href="./#" onclick="showDay(0)">Day-1 (Apr 14)</a>
+                <a href="./#" onclick="showDay(1)">Day-2 (Apr 15)</a>
                 </div>
             </div>
 
