--- a/templates/regSuccess.html
+++ b/templates/regSuccess.html
@@ -1,4 +1,7 @@
-{% load static %}
+<!-- BASE FILE PATH -->
+<!-- <base href="file:///run/media/shivam/DataDrive/IIT%20Roorkee/Aalok%20misra/Website/" /> -->
+<base href="{{site.baseurl}}" />
+<!-- BASE FILE PATH -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -12,11 +15,11 @@
 </head>
 <body>
   
-    <!-- Navigation bar -->
+    <!-- Navbar -->
     <nav class="navbar">
         <div class="nav-links">
-            <a href="/" class="nav-item">Home</a>
-            <a href="/about" class="nav-item">About</a>
+            <a href="../index.html" class="nav-item">Home</a>
+            <a href="./about.html" class="nav-item">About</a>
 
         </div>
         <!--<div class="logo">Logo</div> -->
@@ -24,13 +27,13 @@
             <div class="dropdown">
                 <div class="dropbtn">Schedule ▾</div>
                 <div class="dropdown-content">
-                    <a href="/schedule">Day 1</a>
-                    <a href="/schedule">Day 2</a>
-                    <a href="/lecture">Ed Witten's Lecture</a>
+                    <a href="./schedule.html">Day 1</a>
+                    <a href="./schedule.html">Day 2</a>
+                    <a href="./WittenLecture.html">Ed Witten's Lecture</a>
                 </div>
             </div>
-            <a href="/attendees" class="nav-item">Attendees</a>
-            <a href="/register"> <button class="register-btn">Register</button></a>
+            <a href="./attendees.html" class="nav-item">Attendees</a>
+            <a href="./regForm.html"> <button class="register-btn">Register</button></a>
         </div>
     </nav>
 
