Modified paths in html files

--- a/templates/about.html
+++ b/templates/about.html
@@ -32,7 +32,7 @@
     <!-- Loading animation -->
     <div id="loading">
         <!-- <img src="{% static 'images/anmitra2.png' %}" alt="Prof. A. N. Mitra"> -->
-        <img src="static/gifs/3bodyAnim.gif" alt="Loadidfsng...">
+        <img src="../static/gifs/3bodyAnim.gif" alt="Loadidfsng...">
     </div>
 
     <div class="background the-page"></div>
@@ -40,8 +40,8 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="nav-links">
-            <a href="templates/home.html" class="nav-item">Home</a>
-            <a href="templates/about.html" class="nav-item">About</a>
+            <a href="../index.html" class="nav-item">Home</a>
+            <a href="./about.html" class="nav-item">About</a>
 
         </div>
         <!--<div class="logo">Logo</div> -->
@@ -49,13 +49,13 @@
             <div class="dropdown">
                 <div class="dropbtn">Schedule ▾</div>
                 <div class="dropdown-content">
-                    <a href="templates/schedule.html">Day 1</a>
-                    <a href="templates/schedule.html">Day 2</a>
-                    <a href="templates/WittenLecture.html">Ed Witten's Lecture</a>
+                    <a href="./schedule.html">Day 1</a>
+                    <a href="./schedule.html">Day 2</a>
+                    <a href="./WittenLecture.html">Ed Witten's Lecture</a>
                 </div>
             </div>
-            <a href="templates/attendees.html" class="nav-item">Attendees</a>
-            <a href="templates/regForm.html"> <button class="register-btn">Register</button></a>
+            <a href="./attendees.html" class="nav-item">Attendees</a>
+            <a href="./regForm.html"> <button class="register-btn">Register</button></a>
         </div>
     </nav>
 
