fixing loading animation

--- a/templates/WittenLecture.html
+++ b/templates/WittenLecture.html
@@ -56,7 +56,7 @@
     </section> -->
 
 
-    <div class="hero">
+    <div class="hero the-page">
         <div class="circleWitten" style="background: transparent;">
             <img src="../static/images/EdWitten.jpg" alt="Professor Edward Witten">
         </div>
