--- a/templates/about.html
+++ b/templates/about.html
@@ -38,7 +38,7 @@
     <div class="background the-page"></div>
     
     <!-- Navbar -->
-    <nav class="navbar">
+    <nav class="navbar the-page">
         <div class="nav-links">
             <a href="../index.html" class="nav-item">Home</a>
             <a href="./about.html" class="nav-item">About</a>
