fixed date formats

--- a/templates/WittenLecture.html
+++ b/templates/WittenLecture.html
@@ -75,7 +75,7 @@
             <p>In this lecture, I will discuss recent progress in the development of a background-independent formulation of algebraic gravity. This approach is based on the idea of using algebraic structures to describe the geometry of spacetime without reference to a fixed background metric. I will explain how this framework can be used to study the dynamics of gravitational fields and the structure of spacetime at the quantum level. I will also discuss the implications of this work for our understanding of the nature of gravity and the fundamental structure of the universe.</p>
 
             <h4>Date & Time</h4>
-            <p>15th April 2025, 6:30 PM IST</p>
+            <p>15<sup>th</sup> April 2025, 6:30 PM IST</p>
             
         </div>
     </div>
