--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -23,12 +23,14 @@ body {
   overscroll-behavior: none;
 }
 
-/* Navigation */
+/* Navbar */
     .navbar {
         display: flex;
+        flex-wrap: wrap;
+        width: 100%;
         justify-content: space-between;
         align-items: center;
-        padding: 0rem 2rem;
+        padding: 0.2rem 1rem;
         background: #1C091D; /*#95A3B9*/
         /*background-image: url("/static/images/blackboardbg3.jpg");*/
         position: fixed;
@@ -41,6 +43,7 @@ body {
 
     .nav-links {
         display: flex;
+        flex-wrap: wrap;
         gap: 2rem;
     }
 
@@ -61,6 +64,7 @@ body {
 
     .nav-right {
         display: flex;
+        flex-wrap: wrap;
         gap: 1rem;
         align-items: center;
         font-weight: normal;
@@ -93,7 +97,7 @@ body {
         position: absolute;
         text-align: center;
         background-color: #333;
-        min-width: 160px;
+        /*min-width: 160px;*/
         z-index: 1;
         right: 0;
         font-family: "Krub";
@@ -102,7 +106,7 @@ body {
 
     .dropdown-content a {
         color: white;
-        padding: 12px 16px;
+        padding: 12px 2rem;
         text-decoration: none;
         display: block;
     }
@@ -124,3 +128,4 @@ body {
         background-color: #ddd;
         color: black;
     }
+
