--- a/templates/regForm.html
+++ b/templates/regForm.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="form-group">
-        <label for="position">Position *</label>
+        <label for="position">Positisdfon *</label>
         <select id="position" name="position" required>
             <option value="">Select Position</option>
             <option value="student">Student</option>
