modified registration successs page

--- a/templates/regSuccess.html
+++ b/templates/regSuccess.html
@@ -10,8 +10,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Registration Successful</title>
-  <link rel="stylesheet" href="{% static 'navbar.css' %}">
-  <link rel="stylesheet" href="{% static 'regSuccess.css' %}">
+  <link rel="stylesheet" href="../static/css/navbar.css">
+  <link rel="stylesheet" href="../static/css/regSuccess.css">
 </head>
 <body>
   
