--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -51,7 +51,7 @@
             <div class="title">Schedule of Talks</div>
             <div class="day-links">
                 <a href="day-1" onclick="goToCard(0);" id="btn-1" class="day-btn active">Day-1 (Apr 14, 2025)</a>
-                <a href="" onclick="goToCard(1);" id="btn-2" class="day-btn">Day-2 (Apr 15, 2025)</a>
+                <a href="schedule#day-2.html" onclick="goToCard(1);" id="btn-2" class="day-btn">Day-2 (Apr 15, 2025)</a>
             </div>
         </div>
 
