--- a/static/css/schedule.css
+++ b/static/css/schedule.css
@@ -1,3 +1,11 @@
+        body {
+            font-family: "Krub";
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5;
+            height: 100%;
+        }
+
         .parallax_layer_bg {
             position: absolute;
             top: 0;
@@ -6,12 +14,12 @@
             height: 100%;
             margin: 0px;
             padding: 0px;
-            background-image: url("../static/images/bgFinal.jpg");
+            background-image: url("../images/bgFinal.jpg");
             /*background-color: #f5f5f5;*/
             background-size: cover;
             background-position: center;
-            filter: blur(1px);
-            opacity: 1;
+            filter: blur(6px);
+            opacity: 0.75;
             z-index: -100;
             /*transform: translateZ(-1px) scale(2);*/
         }
@@ -41,7 +49,7 @@
         .header{
             padding: 0.5em 0em;
             margin: 0 auto;
-            background-color: #634113c4;
+            background-color: #63411380;
             border-radius:30px;
             opacity: 1;
             text-align: center;
@@ -113,7 +121,7 @@
             width: 94.737%;
             margin: 1rem auto;
             padding: 2rem 0;
-            background-color: #634113c9;
+            background-color: #63411380;
             border-radius: 30px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 15%);
             scroll-snap-align: center;
@@ -121,7 +129,7 @@
         }
 
         .card {
-            background-color: white;
+            background-color: #;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             width: 50%;
