--- a/static/css/schedule.css
+++ b/static/css/schedule.css
@@ -129,7 +129,7 @@
         }
 
         .card {
-            background-color: #;
+            background-color: #e0e0e0;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             width: 50%;
