--- a/static/css/about.css
+++ b/static/css/about.css
@@ -31,7 +31,8 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url("/static/gifs/bgEqGIF1_low.gif");
+/*    background-image: url("../gifs/bgEqGIF1_low.gif");*/
+    background-image: url("../images/bgFinal.jpg");
 /*    background-image: url("/static/images/bg1963paper.png");*/
 /*    transform: rotate(-0deg);*/
 /*    transform-origin: center;*/
