--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,9 @@
+<!-- BASE FILE PATH -->
+<!-- <base href="file:///run/media/shivam/DataDrive/IIT%20Roorkee/Aalok%20misra/Website/" /> -->
+<base href="{{site.baseurl}}" />
+<!-- BASE FILE PATH -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -32,7 +38,7 @@
         </div>
     </nav>
 
-    <div style="padding-top: 60px;"></div>
+    <div style="padding-top: 3.14vw;"></div>
 
     <div class="hero">
         <!-- <div class="hero-image"> -->
@@ -43,15 +49,23 @@
             <img src="{% static 'images/anmitra.png' %}" alt="Prof. A. N. Mitra">
         </div> -->
         <div class="biggerContainer">
-            <div style="width: 40vw;">
+            <!-- <div style="width: 40vw;">
                 <img src="{% static 'images/anmitra.png' %}" alt="Prof. A. N. Mitra">
+            </div> -->
+
+            <div style="width: 50%;">
+                <!-- &nbsp; -->
             </div>
 
-            <div class="hero-text">
+            <div class="hero-text" style="width: 50%;">
+                <div style="height: 4vw; aspect-ratio: 1;"></div>
                 <h1>A. N. Mitra Memorial Meeting and Lecture</h1>
-                <p style="font-size: 26px;">In the loving memory of Prof. A. N. Mitra, we are holding this memorial meeting and lecture. This online lecture is a tribute to the life and work of late professor A. N. Mitra. His contributions to the field of High Energy and Nuclear Physics are recognised widely around the world and he has inspired many to do the same!</p>
-                <p style="font-size: 40px; font-family: Lora;">April 14-15, 2025</p>
-                <div class="buttons">
+                <div style="height: 1.5vw;"></div>
+                <p style="font-size: 1vw;">In the loving memory of Prof. A. N. Mitra, we are holding this memorial meeting and lecture. This online lecture is a tribute to the life and work of late professor A. N. Mitra. His contributions to the field of High Energy and Nuclear Physics are recognised widely around the world and he has inspired many to do the same!</p>
+                <div style="height: 3.5vw;"></div>
+                <p style="font-size: 1.8vw; font-family: Lora; display: inline-flex;">April 14-15, 2025</p>
+                <div style="width: 10vw;; display: inline-flex;"></div>
+                <div class="buttons" style="display: inline-flex; justify-content: space-between; align-content: right;">
                     <a href="/register" class="type1">Meeting</a>
                     <a href="/lecture" class="type1">Lecture</a>
                 </div>
@@ -65,15 +79,15 @@
     <div> &nbsp;</div> 
 
     <div class="hero" style="
-        border-radius: 20px; 
+        border-radius: 1.04vw; 
         background-color: rgba(40, 40, 40, 1); /*29, 29, 29, 0.5  85, 65, 86, 1*/
         /*background: transparent;*/
-        padding-top: 60px;
-        padding-bottom: 60px;
-        padding-right: 50px;
+        padding-top: 3.14vw;
+        padding-bottom: 3.14vw;
+        padding-right: 2.61vw;
         ">
         <div class="hero-text" style="color: white; vertical-align: top;">
-            <h1 style="font-size: 50px;"> 2<sup>nd</sup> A. N. Mitra Memorial Lecture</h1>
+            <h1 style="font-size: 2.61vw;"> 2<sup>nd</sup> A. N. Mitra Memorial Lecture</h1>
             <p>In the loving memory of Professor Asoke Nath Mitra, we are holding this memorial meeting and lecture. This online lecture is a tribute to the life and work of late professor A. N. Mitra. His contributions to the field of High Energy and Nuclear Physics are recognised widely around the world and he has inspired many to do the same!</p>
 
             <div class="buttons">
@@ -92,7 +106,7 @@
         <!-- Footer -->
         <footer>
             <div class="footer-bottom">
-                <p>In the loving memory of Professor Asoke Nath Mitra! &nbsp; ❤️</p>
+                <p>In the loving memory of Professor Asoke Nath Mitra.</p>
                 <!-- email llink -->
 
                 <p>For queries, contact <a href="mailto:aalok.misra@ph.iitr.ac.in" style="color: cyan;">aalok.misra@ph.iitr.ac.in</a>.</p>
