--- a/templates/WittenLecture.html
+++ b/templates/WittenLecture.html
@@ -24,7 +24,7 @@
     <nav class="navbar">
         <div class="nav-links">
             <a href="../index.html" class="nav-item">Home</a>
-            <a href="./about.html" class="nav-item">About</a>
+            <a href="./about.html" class="nav-item">Prof. A. N. Mitra</a>
 
         </div>
         <!--<div class="logo">Logo</div> -->
@@ -57,8 +57,15 @@
 
 
     <div class="hero">
-        <div class="circleWitten" style="background: transparent;">
+        <div class="Witten" style="background: transparent;">
             <img src="../static/images/EdWitten.jpg" alt="Professor Edward Witten">
+            
+            <!-- horizontal line with red color -->
+            <hr style="width: 100%; margin-top: 10px; margin-bottom: 10px; border: 1px solid #fb4e2f;">
+
+            <h4 style="color: white;">Date & Time</h4>
+            <p style="color: white;">15<sup>th</sup> April 2025, 6:30 PM IST</p>
+
         </div>
         <div class="hero-text" style="color: white;">
             <h3 style="color: #fff;">A background - Independent Algebra For Gravity</h3>
@@ -74,8 +81,8 @@
             <h4>Abstract</h4>
             <p>In this lecture, I will discuss recent progress in the development of a background-independent formulation of algebraic gravity. This approach is based on the idea of using algebraic structures to describe the geometry of spacetime without reference to a fixed background metric. I will explain how this framework can be used to study the dynamics of gravitational fields and the structure of spacetime at the quantum level. I will also discuss the implications of this work for our understanding of the nature of gravity and the fundamental structure of the universe.</p>
 
-            <h4>Date & Time</h4>
-            <p>15<sup>th</sup> April 2025, 6:30 PM IST</p>
+            <!-- <h4>Date & Time</h4>
+            <p>15<sup>th</sup> April 2025, 6:30 PM IST</p> -->
             
         </div>
     </div>
