--- a/templates/about.html
+++ b/templates/about.html
@@ -41,7 +41,7 @@
     <nav class="navbar the-page">
         <div class="nav-links">
             <a href="../index.html" class="nav-item">Home</a>
-            <a href="./about.html" class="nav-item">About</a>
+            <a href="./about.html" class="nav-item">Prof. A. N. Mitra</a>
 
         </div>
         <!--<div class="logo">Logo</div> -->
