--- a/templates/home.html
+++ b/templates/home.html
@@ -85,6 +85,7 @@
         padding-top: 3.14vw;
         padding-bottom: 3.14vw;
         padding-right: 2.61vw;
+        height: 30vw;
         ">
         <div class="hero-text" style="color: white; vertical-align: top;">
             <h1 style="font-size: 2.61vw;"> 2<sup>nd</sup> A. N. Mitra Memorial Lecture</h1>
