--- a/templates/regForm.html
+++ b/templates/regForm.html
@@ -17,8 +17,8 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="nav-links">
-            <a href="/" class="nav-item">Home</a>
-            <a href="/about" class="nav-item">About</a>
+            <a href="../index.html" class="nav-item">Home</a>
+            <a href="./about.html" class="nav-item">Prof. A. N. Mitra</a>
 
         </div>
         <!--<div class="logo">Logo</div> -->
