--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -18,7 +18,7 @@
     <nav class="navbar">
         <div class="nav-links">
             <a href="../index.html" class="nav-item">Home</a>
-            <a href="./about.html" class="nav-item">About</a>
+            <a href="./about.html" class="nav-item">Prof. A. N. Mitra</a>
 
         </div>
         <!--<div class="logo">Logo</div> -->
@@ -211,7 +211,9 @@
                      <a target="_blank" href="https://www.imsc.res.in/romesh_k_kaul">Romesh Kaul</a>,
                      <a target="_blank" href="https://scholar.google.co.in/citations?user=XZPZpasAAAAJ&hl=en">R. S. Kaushal</a>,
                      <a target="_blank" href="https://en.wikipedia.org/wiki/Kalyan_Bidhan_Sinha">Kalyan Sinha</a></p></div>
-                    <div class="topic"><p><strong>Title: </strong>Prof. Asoke Nath Mitra Reminiscences Session</p></div>
+                    <div class="topic" style="display: inline-flex; vertical-align: middle;"><p>
+                        <strong style="display: inline-flex;">Title: </strong> 
+                        <pre style="display: inline-flex; font-size: 0.9rem; font-weight: bold; margin: 0px; margin-top: 4px; vertical-align: bottom;"> Prof. Asoke Nath Mitra Reminiscences Session</pre></p></div>
                     <div class="time"><p><strong>Time: </strong>4:45 – 6:30 PM</p></div>
                     <div class="links">
                         <a href="#" class="meeting">Meeting Link</a>
