--- a/static/css/attendees.css
+++ b/static/css/attendees.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Arial', sans-serif;
-    background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%);
+    background: linear-gradient(135deg, #000000 0%, #a6213e 100%);  /*(135deg, #1a1a2e 0%, #16213e 100%);*/
     min-height: 100vh;
     color: #333;
 }
@@ -25,10 +25,11 @@ header {
 }
 
 h1 {
+    font-family: Lora;
     text-align: center;
     color: #1a1a2e;
     margin-bottom: 20px;
-    font-size: 28px;
+    font-size: 32px;
 }
 
 .search-filter-container {
@@ -53,7 +54,7 @@ h1 {
 }
 
 .search-btn {
-    background: #1a1a2e;
+    background: #012a4a; /*#350688; 1a1a2e*/
     color: white;
     border: none;
     border-radius: 5px;
@@ -123,6 +124,7 @@ h1 {
     font-size: 16px;
 }
 
+
 .stat-card p {
     font-size: 24px;
     font-weight: bold;
@@ -136,6 +138,27 @@ h1 {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
 
+#studentsbutton.active, #studentsbutton:hover {
+    background: #689d6a;
+    color: black;
+}
+
+#facultybutton.active, #facultybutton:hover {
+    background: #458588;
+    color: black;
+}
+
+#postdocbutton.active, #postdocbutton:hover {
+    background: #fabd2f;
+    color: black;
+}
+
+#othersbutton.active # {
+    background: #e07a5f;
+    color: black;
+}
+
+
 table {
     width: 100%;
     border-collapse: collapse;
@@ -148,7 +171,7 @@ th, td {
 }
 
 th {
-    background: #1a1a2e;
+    background: #012a4a;
     color: white;
     font-weight: bold;
 }
@@ -156,109 +179,6 @@ th {
 tr:hover {
     background: rgba(26, 26, 46, 0.05);
 }
- 
-
-/* Navigation */
-    .navbar {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0rem 2rem;
-        background: #1C091D; /*#95A3B9*/
-        /*background-image: url("/static/images/blackboardbg3.jpg");*/
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        z-index: 10000;
-        box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
-
-    .nav-links {
-        display: flex;
-        gap: 2rem;
-    }
-
-    .nav-item {
-        text-decoration: none;
-        color: white;
-        font-family: "Krub"; /*Fredericka the Great*/
-        font-size: 22px; /*28px*/
-        font-weight: normal;
-        padding: 1rem 2rem;
-    }
-
-    .nav-item:hover {
-        text-decoration: none;
-        background-color: #ddd;
-        color: black;
-    }
-
-    .nav-right {
-        display: flex;
-        gap: 1rem;
-        align-items: center;
-        font-weight: normal;
-    }
-
-    .register-btn {
-        background: #ccc;
-        color: black;
-        border: none;
-        padding: 1rem 2rem;
-        margin: 0rem 2rem;
-        cursor: pointer;
-        border-radius: 30px;
-        font-family: "Krub";
-        font-size: 18px;
-        /*margin: 0.5rem 0rem;
-        /*margin-right: 20px;*/
-    }
-
-    .dropdown {
-        position: relative;
-        display: inline-block;
-        font-family: "Krub";
-        font-size: 22px;
-        color: white;
-    }
-
-    .dropdown-content {
-        display: none;
-        position: absolute;
-        background-color: #333;
-        min-width: 160px;
-        z-index: 1;
-        right: 0;
-        font-family: "Krub";
-        font-size: 16px;
-    }
-
-    .dropdown-content a {
-        color: white;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-    }
-
-    .dropdown-content a:hover {
-        background-color: #ddd;
-        color: black;
-    }
-
-    .dropdown:hover .dropdown-content {
-        display: block;
-    }
-
-    .dropbtn {
-        padding: 1rem 2rem;
-    }
-
-    .dropdown:hover .dropbtn {
-        background-color: #ddd;
-        color: black;
-    }
-
 
 /* Atom Animation Styles */
 .atom-animation {
