--- a/static/css/home.css
+++ b/static/css/home.css
@@ -41,14 +41,14 @@ body {
         opacity: 1;
         background-repeat: no-repeat;
         background-size: 100% auto;
-        height: 80vh;
+        height: 40vw; /*80vh*/
 /*        height: 100%;*/
         display: flex;
     }
 
     .hero {
         display: flex;
-        height: 80vh;
+        height: 40vw; /*80vh*/
         /*background-color: #554156;*/
         justify-content: space-between;
         align-items: center;
@@ -119,7 +119,7 @@ body {
     .hero-image img {
         width: 35vw;
         border-radius: 26.14vw; /*30px*/
-        background-image: radial-gradient(circle 50vh at 50% 100%, #a0a0a0, #a0a0a0);
+        background-image: radial-gradient(circle 50vw at 50% 100%, #a0a0a0, #a0a0a0);
         /*background-image: radial-gradient(circle closest-side, #a0a0a0, #a0a0a0);*/
         /*border: 1px solid #333;*/
         /*box-shadow: 0px 0px 5rem #ab9b82, inset 0px 0px 5rem #ab9b82;*/
@@ -160,6 +160,7 @@ body {
             position: relative;
         }
         .circleWitten img {
+            min-width: 400px;
             width: 30vw;
             border-radius: 1%;
             margin-left: 0.52vw;
