--- a/templates/attendees.html
+++ b/templates/attendees.html
@@ -18,7 +18,7 @@
     <nav class="navbar">
         <div class="nav-links">
             <a href="../index.html" class="nav-item">Home</a>
-            <a href="./about.html" class="nav-item">About</a>
+            <a href="./about.html" class="nav-item">Prof. A. N. Mitra</a>
 
         </div>
         <!--<div class="logo">Logo</div> -->
@@ -60,11 +60,11 @@
                 <div class="filter-section">
                     <label>Filter by Role:</label>
                     <div class="filter-buttons">
-                        <button class="filter-btn active" data-role="all">All</button>
-                        <button class="filter-btn" data-role="student">Students</button>
-                        <button class="filter-btn" data-role="faculty">Faculty</button>
-                        <button class="filter-btn" data-role="postdoc">Postdocs</button>
-                        <button class="filter-btn" data-role="other">Others</button>
+                        <button class="filter-btn active" id=allbutton data-role="all">All</button>
+                        <button class="filter-btn" id=studentsbutton data-role="student">Students</button>
+                        <button class="filter-btn" id=facultybutton data-role="faculty">Faculty</button>
+                        <button class="filter-btn" id=postdocbutton data-role="postdoc">Postdocs</button>
+                        <button class="filter-btn" id=othersbutton data-role="other">Others</button>
                     </div>
                 </div>
             </div>
