--- a/templates/regSuccess.html
+++ b/templates/regSuccess.html
@@ -19,7 +19,7 @@
     <nav class="navbar">
         <div class="nav-links">
             <a href="../index.html" class="nav-item">Home</a>
-            <a href="./about.html" class="nav-item">About</a>
+            <a href="./about.html" class="nav-item">Prof. A. N. Mitra</a>
 
         </div>
         <!--<div class="logo">Logo</div> -->
