--- a/static/css/WittenLecture.css
+++ b/static/css/WittenLecture.css
@@ -195,7 +195,7 @@ body {
         .Witten img {
             width: 35vw;
 /*            border-radius: 5%;*/
-/*            margin-left: 10px;*/
+/*            margin-left: 10kiiiii889px;*/
             /*display: block;*/
             /*border:1px solid #A0A0A0;*/
         }
