--- a/static/css/home.css
+++ b/static/css/home.css
@@ -160,7 +160,7 @@ body {
             position: relative;
         }
         .circleWitten img {
-            min-width: 400px;
+/*            min-width: 400px;*/
             width: 30vw;
             border-radius: 1%;
             margin-left: 0.52vw;
